Fix for Horizontal Scrollbars

--- a/css/core.css
+++ b/css/core.css
@@ -50,19 +50,18 @@ button:focus { outline: none; }
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     padding: 2px 0;
+    height: 8px;
     width: 8px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
 }
 
 ::-webkit-scrollbar-button { display: none; }
-::-webkit-scrollbar-corner { display: none; }
-::-webkit-resizer { display: none; }
+::-webkit-scrollbar-corner { background: #EEE; }
+::-webkit-resizer { background: #EEE; }
 
 ::-webkit-scrollbar-track {
     background: #EEE;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
+    /*border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;*/
 }
 
 ::-webkit-scrollbar-thumb {
